fixed background image stretch and grid layout

--- a/final-project/css/styles.css
+++ b/final-project/css/styles.css
@@ -143,7 +143,8 @@ header .fa-solid {
 
 .welcome {
     color: white;
-    background-size: 100% 100%;
+    background-size: cover;
+    background-position: center;
     width: fit-content;
     height: 500px;
     background-repeat: no-repeat;
@@ -565,7 +566,6 @@ footer {
         padding-left: 100px;
     }
 
-
     .about_us {
         padding-right: 100px;
     }
@@ -581,8 +581,8 @@ footer {
     .services {
         display: grid;
         justify-content: center;
-        grid-template-columns: repeat(8, 2fr);
-        grid-template-rows: repeat(2, 2fr);
+        grid-template-columns: repeat(6, 1fr);
+        /* grid-template-rows: repeat(2, 2fr); */
         margin-left: 50px;
     }
 
